# hge-targeting

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
notebooks/: HGE-mpstars-tests-on-synthetic-models.ipynb  Test.ipynb  reading_simulated_populations.ipynb
python/hgetargeting/: distances.py  rjce.py  targeting.py  utils.py
python/hgetargeting/data/: tmass_rgb_coef.fits
