[build-system]
requires = ["setuptools >= 68.2.2"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "hge-targeting"
version = "1.0.0"
dependencies = [
  "scipy",
  "numpy",
  "matplotlib",
  "astropy",
]
requires-python = ">=3.9"
#requires-python = ">=3.11"
authors = [
  {name = "David Nidever", email = "dnidever@montana.edu"},
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "AS5 HGE Targeting"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["taregeting", "photometry", "stars"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://hge-targeting.readthedocs.org"
Repository = "https://github.com/sdss/hge-targeting"
#Issues = "https://github.com/sdss/hge-targeting/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
